# Particle-Sim

./: CMakeLists.txt  README.md
docs/: nbody-sim.md
src/: main.cpp  particle.h  particleHandler.cpp  particleHandler.h  renderer.cpp  renderer.h
